# UdeChile

./: .gitignore  LICENSE
Arquitectura-Computadores/: T1.circ  T2.circ
Arquitectura-Computadores/T3/: Makefile  out.ref  sort-c-im.c  sort-c.c  sort-x86-im.s  sort-x86.s  sort-x86.s.backup  test-sort-x86  test-sort.c  verificar
Desarrollo-Aplicaciones-Web/: E2.html  htdocs - Shortcut.lnk  xampp - Shortcut.lnk
Desarrollo-Aplicaciones-Web/2021-1/: sqluser.txt
Desarrollo-Aplicaciones-Web/Ejercicios/: E1.html  ejercicio3.html  estilo.css  validador.js
Desarrollo-Aplicaciones-Web/T1/: index.html  informar.html  listado.html  stats.html
Diseno-Analisis-Algoritmos/CC4102/: CC4102.cpp  CMakeLists.txt  textSearch.cpp  textSearch.h
Diseno-Analisis-Algoritmos/CC4102/TestData/: lorem-ipsum.txt
Diseno-Analisis-Algoritmos/T1/: Makefile  a.txt  algoritmos.out  bm.cpp  comparison.txt  driver.cpp  file.txt  kmp.cpp  letters.txt  lorem.txt  lotr.txt  numbers.txt
Diseno-Analisis-Algoritmos/T3/: Makefile  main_t3.cpp  test  test.out  veb.cpp  vebTest
Ingenieria-Software/Proyecto/: git.txt
Ingenieria-Software/T1/: Requisitos Funcionales.docx  Revision.txt
Ingenieria-Software/T2/: T2.docx
Ingenieria-Software/T3/: Ficha_caso_de_prueba.ods  Ficha_caso_de_prueba.xlsx
Intro-Programacion/: abstraccion.py  estadisticas.py  tarea2.py
Lenguajes-Programacion/: P1.md  Racket Cheat Sheet.html  T1.bak  T1.rkt  test.1  test.bak  test.rkt
Lenguajes-Programacion/T2/: P2.bak  P2.rkt  (+7 more)
Programacion-Funcional/: Auxiliares.hs  LICENSE  Notes.hs  T1.hs  T2.hs  T3.hs  T4.hs  T6.hs
(+373 files in other folders)
